@@ -2,12 +2,66 @@
 
 namespace Drupal\search_api\Plugin\search_api\display;
 
+use Drupal\Core\Routing\RouteMatchInterface;
 use Drupal\search_api\Display\DisplayPluginBase;
+use Symfony\Component\DependencyInjection\ContainerInterface;
 
 /**
  * Provides a base class for Views displays.
  */
 abstract class ViewsDisplayBase extends DisplayPluginBase {
+
+  /**
+   * The current route match service.
+   *
+   * @var \Drupal\Core\Routing\RouteMatchInterface|null
+   */
+  protected $currentRouteMatch;
+
+  /**
+   * {@inheritdoc}
+   */
+  public static function create(ContainerInterface $container, array $configuration, $plugin_id, $plugin_definition) {
+    /** @var static $display */
+    $display = parent::create($container, $configuration, $plugin_id, $plugin_definition);
+
+    $display->setCurrentRouteMatch($container->get('current_route_match'));
+
+    return $display;
+  }
+
+  /**
+   * Retrieves the current route match service.
+   *
+   * @return \Drupal\Core\Routing\RouteMatchInterface
+   *   The current route match service.
+   */
+  public function getCurrentRouteMatch() {
+    return $this->currentRouteMatch ?: \Drupal::routeMatch();
+  }
+
+  /**
+   * Sets the current route match service.
+   *
+   * @param \Drupal\Core\Routing\RouteMatchInterface $current_route_match
+   *   The new current route match service.
+   *
+   * @return $this
+   */
+  public function setCurrentRouteMatch(RouteMatchInterface $current_route_match) {
+    $this->currentPath = $current_route_match;
+    return $this;
+  }
+
+  /**
+   * {@inheritdoc}
+   */
+  public function isRenderedInCurrentRequest() {
+    $plugin_definition = $this->getPluginDefinition();
+    $current_route = $this->getCurrentRouteMatch()->getRouteName();
+    $view_route = 'view.' . $plugin_definition['view_id'] . '.' . $plugin_definition['view_display'];
+    return $current_route == $view_route;
+  }
 
   /**
    * {@inheritdoc}
